fixed horizontal scroll for mobile safari

--- a/lacunaerrata/blog/static/blog/css/main.css
+++ b/lacunaerrata/blog/static/blog/css/main.css
@@ -596,6 +596,7 @@
     flex-flow: row;
     justify-content: center;
     overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
   }
 
   .imgContainer img {
